--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,600;1,600&display=swap');
 
 * {
     margin: 0px;
@@ -126,7 +127,7 @@ button > p:hover{
         font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         max-width: 450px;
     }
-    
+
     .container {
         display: flex;
         flex-direction: column;
